--- a/TheETProject/Main.storyboard
+++ b/TheETProject/Main.storyboard
@@ -17,7 +17,7 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="73" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="t7u-7c-WSH">
@@ -107,7 +107,7 @@
                         <viewControllerLayoutGuide type="bottom" id="s6d-MC-3Yq"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="vph-lA-IgX">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photo Gallery" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cP2-Pm-tLX">
@@ -130,7 +130,7 @@
                             <constraint firstItem="cP2-Pm-tLX" firstAttribute="top" secondItem="BbB-GE-V46" secondAttribute="bottom" constant="86" id="ynb-kD-KYW"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" id="aTg-26-ZMk"/>
+                    <tabBarItem key="tabBarItem" title="" image="Compact Camera" selectedImage="Compact Camera Filled" id="aTg-26-ZMk"/>
                     <navigationItem key="navigationItem" title="Title" id="yOX-pd-eik"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bhH-3d-iZS" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -146,7 +146,7 @@
                         <viewControllerLayoutGuide type="bottom" id="KPh-yf-Lvj"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="wls-Zh-9IN">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flights" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IOo-Rg-9mi">
@@ -169,7 +169,13 @@
                             <constraint firstItem="IOo-Rg-9mi" firstAttribute="top" secondItem="1Ji-o1-FU1" secondAttribute="bottom" constant="123" id="Zfr-jJ-fF1"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" id="Ca6-15-uNV"/>
+                    <tabBarItem key="tabBarItem" title="" image="Airplane Take Off" selectedImage="Airplane Take Off Filled" id="Ca6-15-uNV">
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
+                                <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </tabBarItem>
                     <navigationItem key="navigationItem" title="Title" id="b2e-XO-AcL"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HlD-s4-Hwn" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -185,16 +191,16 @@
                         <viewControllerLayoutGuide type="bottom" id="Opg-Cu-YaR"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8qh-Eu-Vgw">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxF-UE-ruG">
-                                <rect key="frame" x="214" y="232" width="172" height="23"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <rect key="frame" x="188" y="232" width="224" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place, Country" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XU2-R7-6ce">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Place, Country" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XU2-R7-6ce">
                                 <rect key="frame" x="250" y="265" width="100" height="22"/>
                                 <fontDescription key="fontDescription" name="BodoniSvtyTwoITCTT-Book" family="Bodoni 72" pointSize="18"/>
                                 <color key="textColor" red="0.91764705879999997" green="0.36862745099999999" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -221,23 +227,23 @@
                                     </mask>
                                 </variation>
                             </imageView>
-                            <view alpha="0.40000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1w6-vy-2e1">
-                                <rect key="frame" x="0.0" y="371" width="600" height="180"/>
+                            <view alpha="0.40000000000000002" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1w6-vy-2e1">
+                                <rect key="frame" x="0.0" y="371" width="600" height="165.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="temp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mgm-oO-fhQ">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="temp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mgm-oO-fhQ">
                                 <rect key="frame" x="40" y="322" width="64" height="33.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QCl-bc-Meu">
-                                <rect key="frame" x="505.5" y="322" width="54.5" height="33.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QCl-bc-Meu">
+                                <rect key="frame" x="505" y="322" width="54.5" height="33.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="next weekend" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EcV-cn-EPa">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="next weekend" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EcV-cn-EPa">
                                 <rect key="frame" x="20" y="346" width="106" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.91764705882352937" green="0.36862745098039218" blue="0.35686274509803922" alpha="1" colorSpace="calibratedRGB"/>
@@ -267,7 +273,13 @@
                             <constraint firstItem="dxF-UE-ruG" firstAttribute="top" secondItem="hFx-ra-kQ0" secondAttribute="bottom" constant="20" id="yeO-wq-3QL"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" id="vqh-lx-Y3s"/>
+                    <tabBarItem key="tabBarItem" title="" image="Clouds" selectedImage="Clouds Filled" id="vqh-lx-Y3s">
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
+                                <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </tabBarItem>
                     <navigationItem key="navigationItem" title="Title" id="piZ-nR-Zmc"/>
                     <connections>
                         <outlet property="CurrentTemperatureLabel" destination="Mgm-oO-fhQ" id="ga3-RW-bAi"/>
@@ -285,11 +297,11 @@
         <scene sceneID="9QM-oP-eCf">
             <objects>
                 <tabBarController id="ZUj-jM-gkn" customClass="CityTabBarController" customModule="TheETProject" customModuleProvider="target" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="JwK-G4-ynC"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="EbF-Sk-cix">
+                    <tabBar key="tabBar" contentMode="scaleToFill" translucent="NO" id="EbF-Sk-cix">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.91764705882352937" green="0.36862745098039218" blue="0.35686274509803922" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="398-Sg-vua" kind="relationship" relationship="viewControllers" id="sZR-jk-Oya"/>
@@ -506,7 +518,13 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Airplane Take Off" width="30" height="21"/>
+        <image name="Airplane Take Off Filled" width="33" height="23"/>
         <image name="Back Chevron" width="13" height="18"/>
+        <image name="Clouds" width="38" height="24"/>
+        <image name="Clouds Filled" width="41" height="26"/>
+        <image name="Compact Camera" width="28" height="22"/>
+        <image name="Compact Camera Filled" width="28" height="22"/>
         <image name="closeButton" width="14" height="12"/>
     </resources>
     <inferredMetricsTieBreakers>
